# eml-parser-pipeline

./: .gitignore  README.md  demo_notebook.ipynb  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-package.yml
config/: schema.py  settings.py
etl/core/: config_loader.py  context.py  logger.py  utils.py
etl/extract/: parser.py
etl/load/: batch_control.py  storage.py
etl/transform/: data_quality.py  enrichments.py  processor.py
examples/: generate_sample_eml.py
tests/: conftest.py  test_batch_control.py  test_generate_sample_eml.py  test_imports.py  test_pipeline_smoke.py
