[project]
name = "eml-parser-pipeline"
version = "0.1.0"
description = "APython ETL that extracts message and attachment content from .eml files. Transforms, validates, and loads into CSV and SQLite with complete batch tracking."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --maxfail=1 --disable-warnings --cov=. --cov-report=term-missing"